# omniRAG

./: .dockerignore  .env.example  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  Dockerfile  QUICKSTART.md  README.md  Taskfile.yml  docker-compose.slack.yml  docker-compose.web.yml  docker-compose.yml  pyproject.toml  release-please-config.json
.github/workflows/: ci.yml  create-feature-pr.yml  docker.yml  release-please.yml
app/: main.py
app/channels/: base.py  discord.py  mcp_channel.py  slack.py  telegram.py  web.py
app/core/: config.py  normalizer.py  rag_engine.py  reload_server.py  security.py
app/providers/: anthropic.py  base.py  openai_prov.py
app/templates/: index.html
docs/: 1-hi.md  2022-01-28-self-vagrant-box.mdx  2022-03-06-goodnotes-prom.md  2022-03-08-notion.md  2022-11-20-lens-build.md  2022-11-22-kubed-cross-sync.mdx  2022-11-23-pl-engineering.md  2022-12-05-terraformer.md  2022-12-31-helm-vs-python.md  2023-01-13-irsa.md  2023-02-26-ansible-provisioner.md  2023-03-28-xonsh.md  2023-03-30-12f.md  2023-06-24-ansible-pull-localhost.md  2023-07-08-async-k8s-client.md  2023-08-30-tf-bsl.md  2024-01-01-hello.md  2025-03-29-asdf.md  2025-05-19-rust-raycast.md  2025-07-13-gl-ff.md  2025-07-27.md  2025-09-03.md  2026-by.md  authors.yml  career.md  intro.md  reference.mdx
docs/resources/: go.md  (+7 more)
scripts/: index_documents.py
tests/: test_config.py  test_confluence_connector.py  test_embed_cache.py  test_indexer.py  test_normalizer.py  test_rag_reload.py  test_reload_server.py  test_security.py  test_telegram_format.py
user/: system-prompt.md
(+99 files in other folders)
