[project]
name = "omnirag"
version = "0.2.1"
description = "Stateless multi-provider RAG chatbot orchestrator"
requires-python = ">=3.12"
dependencies = [
    "aiogram==3.14.0",
    "discord.py>=2.3.0",
    "slack-bolt>=1.18.0",
    "openai>=1.40.0",
    "faiss-cpu>=1.8.0",
    "numpy>=1.26.0",
    "pydantic-settings>=2.3.0",
    "python-dotenv>=1.0.0",
    "loguru>=0.7.2",
    "fastapi>=0.111.0",
    "uvicorn[standard]>=0.30.0",
    "jinja2>=3.1.0",
    "httpx>=0.27.0",
    "boto3>=1.34.0",
    "pypdf>=4.0.0",
]

[project.optional-dependencies]
anthropic = ["anthropic>=0.30.0"]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "ruff>=0.4.10",
    "pre-commit>=3.7",
    "httpx>=0.27.0",
]

[tool.uv]
package = false

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort
    "UP",   # pyupgrade
    "B",    # flake8-bugbear
    "SIM",  # flake8-simplify
]
ignore = [
    "E501",   # line too long — ruff formatter handles it
    "B008",   # do not perform function calls in argument defaults
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["S101"]   # assert is fine in tests

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
log_cli = true
log_cli_level = "WARNING"
